Refactors redundant MLMD value related functions. - Moves mlmd.common_utils for into data_types_utils in ml_pipeilnes_sdk package. -   Also renames existing mlmd value related functions for consistency.
  build_exec_property_dict -> build_value_dict
  build_exec_property_value_dict -> build_metadata_value_dict
- Replaces compiler_utils.set_field_value_pb() with data_types_utils.set_metadata_value().

PiperOrigin-RevId: 353574836

--- a/docs/tutorials/tfx/components.ipynb
+++ b/docs/tutorials/tfx/components.ipynb
@@ -153,8 +153,7 @@
       },
       "outputs": [],
       "source": [
-        "# TODO(ccy): Fix need to use deprecated pip resolver.\n",
-        "!pip install -q -U --use-deprecated=legacy-resolver tfx"
+        "!pip install -q -U --use-feature=2020-resolver tfx"
       ]
     },
     {
@@ -240,8 +239,7 @@
       "outputs": [],
       "source": [
         "print('TensorFlow version: {}'.format(tf.__version__))\n",
-        "# TODO(ccy): Revert to `tfx.__version__` after 0.27.0 release.\n",
-        "print('TFX version: {}'.format(__import__('tfx.version').__version__))"
+        "print('TFX version: {}'.format(tfx.__version__))"
       ]
     },
     {
