--- a/tfx/examples/chicago_taxi_pipeline/taxi_pipeline_interactive.ipynb
+++ b/tfx/examples/chicago_taxi_pipeline/taxi_pipeline_interactive.ipynb
@@ -202,7 +202,6 @@
         "from tfx.proto import pusher_pb2\n",
         "from tfx.proto import trainer_pb2\n",
         "from tfx.proto.evaluator_pb2 import SingleSlicingSpec\n",
-        "from tfx.utils.dsl_utils import external_input\n",
         "from tfx.types import Channel\n",
         "from tfx.types.standard_artifacts import Model\n",
         "from tfx.types.standard_artifacts import ModelBlessing\n",
@@ -414,7 +413,7 @@
       },
       "outputs": [],
       "source": [
-        "example_gen = CsvExampleGen(input=external_input(_data_root))\n",
+        "example_gen = CsvExampleGen(input_base=_data_root)\n",
         "context.run(example_gen)"
       ]
     },
